--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{ohlei2023,
-  abbr={qtlmapping},
+  abbr={medRxiv},
   bibtex_show={true},
   title={Genome-wide QTL mapping across three tissues highlights several Alzheimer’s and Parkinson’s disease loci potentially acting via DNA methylation},
   author={Ohlei, Olena and Sommerer, Yasmine and Dobricic, Valerija and Homann, Jan and Deecke, Laura and Schilling, Marcel and Bartrés-Faz, David and Cattaneo, Gabriele and Düzel, Sandra and Fjell, Anders M. and Lindenberger, Ulman and Pascual-Leone, Álvaro and Sabet, Sanaz Sedghpour and Solé-Padullés, Cristina and Tormos, Joseph M. and Vetter, Valentin M. and Walhovd, Kristine B. and Wesse, Tanja and Wittig, Michael and Franke, Andre and Demuth, Ilja and Lill, Christina M. and Bertram, Lars},
