--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -107,7 +107,7 @@ selected={true}
 }
 
 @article{Sommerer2022a,
-abbr={Clinical Epigenetics},
+abbr={Clin. Epigenetics},
 abstract = {Epigenome-wide association studies (EWAS) assessing the link between DNA methylation (DNAm) and phenotypes related to structural brain measures, cognitive function, and neurodegenerative diseases are becoming increasingly more popular. Due to the inaccessibility of brain tissue in humans, several studies use peripheral tissues such as blood, buccal swabs, and saliva as surrogates. To aid the functional interpretation of EWAS findings in such settings, there is a need to assess the correlation of DNAm variability across tissues in the same individuals. In this study, we performed a correlation analysis between DNAm data of a total of n = 120 matched post-mortem buccal and prefrontal cortex samples. We identified nearly 25,000 (3% of approximately 730,000) cytosine-phosphate-guanine (CpG) sites showing significant (false discovery rate q < 0.05) correlations between buccal and PFC samples. Correlated CpG sites showed a preponderance to being located in promoter regions and showed a significant enrichment of being determined by genetic factors, i.e. methylation quantitative trait loci (mQTL), based on buccal and dorsolateral prefrontal cortex mQTL databases. Our novel buccal–brain DNAm correlation map will provide a valuable resource for future EWAS using buccal samples for studying DNAm effects on phenotypes relating to the brain. All correlation results are made freely available to the public online.},
 author = {Sommerer, Yasmine and Ohlei, Olena and Dobricic, Valerija and Oakley, Derek H. and Wesse, Tanja and {Sedghpour Sabet}, Sanaz and Demuth, Ilja and Franke, Andre and Hyman, Bradley T. and Lill, Christina M. and Bertram, Lars},
 doi = {10.1186/S13148-022-01357-W/FIGURES/4},
@@ -127,7 +127,7 @@ selected={true}
 }
 
 @article{Sommerer2023,
-abbr={Alzheimer's Research and Therapy},
+abbr={Alzheimer's res. ther.},
 abstract = {Background: Studies on DNA methylation (DNAm) in Alzheimer's disease (AD) have recently highlighted several genomic loci showing association with disease onset and progression. Methods: Here, we conducted an epigenome-wide association study (EWAS) using DNAm profiles in entorhinal cortex (EC) from 149 AD patients and control brains and combined these with two previously published EC datasets by meta-analysis (total n = 337). Results: We identified 12 cytosine-phosphate-guanine (CpG) sites showing epigenome-wide significant association with either case–control status or Braak's tau-staging. Four of these CpGs, located in proximity to CNFN/LIPE, TENT5A, PALD1/PRF1, and DIRAS1, represent novel findings. Integrating DNAm levels with RNA sequencing-based mRNA expression data generated in the same individuals showed significant DNAm-mRNA correlations for 6 of the 12 significant CpGs. Lastly, by calculating rates of epigenetic age acceleration using two recently proposed “epigenetic clock” estimators we found a significant association with accelerated epigenetic aging in the brains of AD patients vs. controls. Conclusion: In summary, our study represents the hitherto most comprehensive EWAS in AD using EC and highlights several novel differentially methylated loci with potential effects on gene expression.},
 author = {Sommerer, Yasmine and Dobricic, Valerija and Schilling, Marcel and Ohlei, Olena and Sabet, Sanaz Sedghpour and Wesse, Tanja and Fu{\ss}, Janina and Franzenburg, S{\"{o}}ren and Franke, Andre and Parkkinen, Laura and Lill, Christina M. and Bertram, Lars},
 doi = {10.1186/S13195-023-01232-7/TABLES/6},
