--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,7 @@
 }
 
 @article{Vetter2022,
-abbr={Innovation in Aging},
+abbr={Innov. Aging},
 abstract = {Particularly older people are at risk for deficient vitamin D levels, as their capability for cutaneous synthetization is lower and they are often less exposed to sunlight. However, the resulting impact on one individual's health is not fully understood. To examine potential consequences of low vitamin D levels for health of older people, we examined its relationship with a DNA related biomarker of aging, DNA methylation age acceleration (DNAmAA). Several epigenetic clocks, that are used to estimate this parameter from methylation fractions of specific cytosine-phosphate-guanine sites, are available and differ in aspects of aging they represent best. Five clocks, 7-CpG clock, Horvath's clock, Hannum's clock, PhenoAge, and GrimAge, were available in the longitudinal BASE-II cohort (n=1,100) at follow-up examination. DNAmAA estimated from 7-CpG clock and GrimAge was associated with vitamin D levels in covariate adjusted regression analysis. Additionally, a quasi-interventional study design was employed and showed 2.6 year lower 7-CpG DNAmAA (p=0.011) and 1.3-year lower Horvath DNAmAA (p=0.042) in vitamin D deficient participants that chose to start vitamin D supplementation during the follow-up period of 7.4 ± 1.5 years compared to a matched control-group of participants with untreated vitamin D deficiency. No statistically significant difference was found between sufficiently treated participants with vitamin D deficiency and a matched group of participants that reached sufficient vitamin D level without supplementation. Although validation of our results in a randomized controlled trial is needed, our findings suggest, that vitamin D deficiency associated higher rates of epigenetic aging can potentially be reversed through supplementation.},
 author = {Vetter, Valentin and Sommerer, Yasmine and Kalies, Christian and Spira, Dominik and Bertram, Lars and Demuth, Ilja},
 doi = {10.1093/GERONI/IGAC059.1738},
@@ -31,7 +31,7 @@ year = {2022}
 }
 
 @article{Demuth2022,
-abbr={Innovation in Aging},
+abbr={Innov. Aging},
 abstract = {The diagnosis of metabolic syndrome (MetS) relies on cut-off values for five cardiovascular risk factors, three of which must be met to make the diagnosis. While this approach has certain advantages in the clinical setting, it only allows a binary classification relying on cut-off values. Thus, individuals receiving the same MetS diagnosis may differ in terms of disease severity. We have recently developed a continuous measure of the metabolic load (MetL) that was calculated as a latent factor from indicators that are used to diagnose the MetS enabling a more differentiated assessment. DNA methylation age acceleration (DNAmAA) is a widely accepted biomarker of aging which can be derived from a variety of epigenetic clocks. However, it is still unclear which aspects of aging these biomarkers represent best. Aim of the current study was to evaluate whether and how the MetS and MetL relate to DNAmAA derived from five epigenetic clocks (7-CpG clock, Horvath's clock, Hannum's clock, PhenoAge, and GrimAge). MetS was diagnosed according to the AHA/IDF/NHLBI criteria (2009) and the latent MetL factor was extracted from a confirmatory factor analysis considering the same diagnostic parameters. DNAmAA estimated from PhenoAge and GrimAge were significantly associated with MetS (beta=0.036 and beta=0.063, both p<0.05) and MetL (both beta=0.009 and p<0.05) in regression analyses adjusted for age and gender including 1,100 participants from the follow-up assessments of the Berlin Aging Study II (BASE-II, mean age 75.6 ±3.8 years). The results will be discussed with respect to clinical relevance in the context of current literature.},
 author = {Demuth, Ilja and D{\"{u}}zel, Sandra and Vetter, Valentin and Drewelies, Johanna and Sommerer, Yasmine and Steinhagen-Thiessen, Elisabeth and Gerstorf, Denis and Bertram, Lars},
 doi = {10.1093/GERONI/IGAC059.009},
@@ -61,7 +61,7 @@ year = {2023}
 }
 
 @article{Smith2023,
-abbr={Alzheimer's & Dementia},
+abbr={DADM},
 author = {Smith, Rebecca G. and Imm, Jennifer L and Dobricic, Valerija and Sommerer, Yasmine and Bos, Isabelle and Vos, Stephanie J. B. and Verhey, Frans R.J. and Scheltens, Philip and Engelborgs, Sebastiaan and Frisoni, Giovanni B and Blin, Olivier and Richardson, Jill C and Bordet, R{\'{e}}gis and Tsolaki, Magda and Popp, Julius and Martinez‐Lage, Pablo and Lleo, Alberto and Johannsen, Peter and Freund‐Levi, Yvonne and Lutz, Fr{\"{o}}lich and Vandenberghe, Rik and Wittig, Michael and Frank, Andre and Lovestone, Simon and Streffer, Johannes and Andreasson, Ulf and Blennow, Kaj and Visser, Pieter Jelle and Zetterberg, Henrik and Bertram, Lars and Lunnon, Katie},
 doi = {10.1002/ALZ.080072},
 issn = {1552-5260},
@@ -147,7 +147,7 @@ selected={true}
 }
 
 @article{Vetter2023,
-abbr={Communications Medicine},
+abbr={Commun. Med},
 abstract = {Patients with Type 2 diabetes mellitus (T2D) are at risk for micro- and macrovascular complications. Implementable risk scores are needed to improve targeted prevention for patients that are particularly susceptible to complications. The epigenetic clock estimates an individual's biological age using DNA methylation profiles. In this study, we examined older adults of the Berlin Aging Study II that were reexamined on average 7.4 years after baseline assessment as part of the GendAge study. DNA methylation age (DNAmA) and its deviation from chronological age DNAmA acceleration (DNAmAA) were calculated with the 7-CpG clock (available at both timepoints, n = 1,071), Horvath's clock, Hannum's clock, PhenoAge and GrimAge (available at follow-up only, n = 1,067). T2D associated complications were assessed with the Diabetes Complications Severity Index (DCSI). We report on a statistically significant association between oral glucose tolerance test results and Hannum and PhenoAge DNAmAA. PhenoAge was also associated with fasting glucose. In contrast, we found no cross-sectional association after covariate adjustment between DNAmAA and a diagnosis of T2D. However, longitudinal analyses showed that every additional year of 7-CpG DNAmAA at baseline increased the odds for developing one or more additional complications or worsening of an already existing complication during the follow-up period by 11% in male participants with T2D. This association persisted after covariate adjustment (OR = 1.11, p = 0.045, n = 56). Although our results remain to be independently validated, this study shows promising evidence of utility of the 7-CpG clock in identifying patients with diabetes who are at high risk for developing complications. Deterioration of vision, kidney function and cardiovascular function are just a few examples of diabetes-related complications. However, not all patients develop these complications, and it is desirable to detect patients that have a high risk for the complications early. In this study, we examine markers, which are based on reversible modifications of the DNA, in the context of diabetes and its complications. We found that one of these biomarkers is able to predict the development of diabetes complications over a period of about seven years in our dataset. If these results can be confirmed in other studies, our findings might help physicians to identify patients with diabetes that have an increased risk for developing complications in the future. Vetter et al. evaluate cross-sectional and longitudinal associations between DNA methylation age acceleration and type 2 diabetes and its complications in older adults. Although epigenetic aging does not associate with a diagnosis of diabetes, 7-CpG-based estimates are associated with increased risk of developing complications.},
 author = {Vetter, Valentin Max and Spieker, Johanne and Sommerer, Yasmine and Buchmann, Nikolaus and Kalies, Christian Humberto and Regitz-Zagrosek, Vera and Bertram, Lars and Demuth, Ilja},
 doi = {10.1038/s43856-023-00250-8},
@@ -165,7 +165,7 @@ year = {2023}
 }
 
 @article{Vetter2022b,
-abbr={Frontiers in Genetics},
+abbr={Front. genet.},
 abstract = {DNA methylation age (DNAm age, epigenetic clock) is a novel and promising biomarker of aging. It is calculated from the methylation fraction of specific cytosine phosphate guanine sites (CpG sites) of genomic DNA. Several groups have proposed epigenetic clock algorithms and these differ mostly regarding the number and location of the CpG sites considered and the method used to assess the methylation status. Most epigenetic clocks are based on a large number of CpGs, e.g. as measured by DNAm microarrays. We have recently evaluated an epigenetic clock based on the methylation fraction of seven CpGs that were determined by methylation-sensitive single nucleotide primer extension (MS-SNuPE). This method is more cost-effective when compared to array-based technologies as only a few CpGs need to be examined. However, there is only little data on the correspondence in epigenetic age estimation using the 7-CpG clock and other algorithms. To bridge this gap, in this study we measured the 7-CpG DNAm age using two methods, via MS-SNuPE and via the MethylationEPIC array, in a sample of 1,058 participants of the Berlin Aging Study II (BASE-II), assessed as part of the GendAge study. On average, participants were 75.6 years old (SD: 3.7, age range: 64.9–90.0, 52.6% female). Agreement between methods was assessed by Bland-Altman plots. DNAm age was highly correlated between methods (Pearson's r = 0.9) and Bland-Altman plots showed a difference of 3.1 years. DNAm age by the 7-CpG formula was 71.2 years (SD: 6.9 years, SNuPE) and 68.1 years (SD: 6.4 years, EPIC array). The mean of difference in methylation fraction between methods for the seven individual CpG sites was between 0.7 and 13 percent. To allow direct conversion of DNAm age obtained from both methods we developed an adjustment formula with a randomly selected training set of 529 participants using linear regression. After conversion of the Illumina data in a second and independent validation set, the adjusted DNAm age was 71.44 years (SD: 6.1 years, n = 529). In summary, we found the results of DNAm clocks to be highly comparable. Furthermore, we developed an adjustment formula that allows for direct conversion of DNAm age estimates between methods and enables one singular clock to be used in studies that employ either the Illumina or the SNuPE method.},
 author = {Vetter, Valentin Max and Kalies, Christian Humberto and Sommerer, Yasmine and Bertram, Lars and Demuth, Ilja},
 doi = {10.3389/FGENE.2021.759357/BIBTEX},
@@ -182,7 +182,7 @@ year = {2022}
 }
 
 @article{Vetter2022c,
-abbr={Translational Psychiatry},
+abbr={Transl. Psychiatry},
 abstract = {Adverse effects of psychological stress on physical and mental health, especially in older age, are well documented. How perceived stress relates to the epigenetic clock measure, DNA methylation age acceleration (DNAmAA), is less well understood and existing studies reported inconsistent results. DNAmAA was estimated from five epigenetic clocks (7-CpG, Horvath's, Hannum's, PhenoAge and GrimAge DNAmAA). Cohen's Perceived Stress Scale (PSS) was used as marker of psychological stress. We analyzed data from 1,100 Berlin Aging Study II (BASE-II) participants assessed as part of the GendAge study (mean age = 75.6 years, SD = 3.8 years, 52.1% women). In a first step, we replicated well-established associations of perceived stress with morbidity, frailty, and symptoms of depression in the BASE-II cohort studied here. In a second step, we did not find any statistically significant association of perceived stress with any of the five epigenetic clocks in multiple linear regression analyses that adjusted for covariates. Although the body of literature suggests an association between higher DNAmAA and stress or trauma during early childhood, the current study found no evidence for an association of perception of stress with DNAmAA in older people. We discuss possible reasons for the lack of associations and highlight directions for future research.},
 author = {Vetter, Valentin Max and Drewelies, Johanna and Sommerer, Yasmine and Kalies, Christian Humberto and Regitz-Zagrosek, Vera and Bertram, Lars and Gerstorf, Denis and Demuth, Ilja},
 doi = {10.1038/s41398-022-02181-9},
@@ -201,7 +201,7 @@ year = {2022}
 }
 
 @article{Nyberg2023,
-abbr={Cerebral Cortex},
+abbr={Cereb. Cortex},
 abstract = {It is well documented that some brain regions, such as association cortices, caudate, and hippocampus, are particularly prone to age-related atrophy, but it has been hypothesized that there are individual differences in atrophy profiles. Here, we document heterogeneity in regional-atrophy patterns using latent-profile analysis of 1,482 longitudinal magnetic resonance imaging observations. The results supported a 2-group solution reflecting differences in atrophy rates in cortical regions and hippocampus along with comparable caudate atrophy. The higher-atrophy group had the most marked atrophy in hippocampus and also lower episodic memory, and their normal caudate atrophy rate was accompanied by larger baseline volumes. Our findings support and refine models of heterogeneity in brain aging and suggest distinct mechanisms of atrophy in striatal versus hippocampal-cortical systems.},
 author = {Nyberg, Lars and Andersson, Micael and Lundquist, Anders and Baar{\'{e}}, William F.C. and Bartr{\'{e}}s-Faz, David and Bertram, Lars and Boraxbekk, Carl Johan and Brandmaier, Andreas M. and Demnitz, Naiara and Drevon, Christian A. and Duezel, Sandra and Ebmeier, Klaus P. and Ghisletta, Paolo and Henson, Richard and Jensen, Daria E.A. and Kievit, Rogier A. and Knights, Ethan and K{\"{u}}hn, Simone and Lindenberger, Ulman and Plachti, Anna and Pudas, Sara and Roe, James M. and Madsen, Kathrine Skak and Sol{\'{e}}-Padull{\'{e}}s, Cristina and Sommerer, Yasmine and Suri, Sana and Zsoldos, Eniko and Fjell, Anders M. and Walhovd, Kristine B.},
 doi = {10.1093/CERCOR/BHAC400},
@@ -239,7 +239,7 @@ year = {2022}
 }
 
 @article{Vetter2022e,
-abbr={The Journals of Gerontology: Series A},
+abbr={J. Gerontol.},
 abstract = {DNA methylation age acceleration (DNAmAA, derived from an epigenetic clock) and relative leukocyte telomere length (rLTL) are widely accepted biomarkers of aging. Nevertheless, it is still unclear which aspects of aging they represent best. Here we evaluated longitudinal associations between baseline rLTL and DNAmAA (estimated with 7-CpG clock) and functional assessments covering different domains of aging. Additionally, we made use of cross-sectional data on these assessments and examined their association with DNAmAA estimated by 5 different DNAm age measures. Two-wave longitudinal data were available for 1 083 participants of the Berlin Aging Study II who were reexamined on average 7.4 years after baseline as part of the GendAge study. Functional outcomes were assessed with Fried's frailty score, Tinetti mobility test, falls in the past 12 months (yes/no), finger-floor distance, Mini-Mental State Examination, Center for Epidemiologic Studies - Depression scale, activities of daily living, instrumented ADL, and mini nutritional assessment. Overall, we found no evidence for an association between the molecular biomarkers measured at baseline, rLTL, and DNAmAA (7-CpG clock), and functional assessments assessed at follow-up. Similarly, a cross-sectional analysis of follow-up data did also not show evidence for associations of the various DNAmAA measures (7-CpG clock, Horvath's clock, Hannum's clock PhenoAge, and GrimAge) with functional assessments. In conclusion, neither rLTL nor 7-CpG DNAmAA was able to predict impairment in the analyzed assessments over a $\sim$7-year time course. Similarly, DNAmAA estimated from 5 epigenetic clocks was not a good cross-sectional marker of health deterioration either.},
 author = {Vetter, Valentin M. and Kalies, Christian H. and Sommerer, Yasmine and Spira, Dominik and Drewelies, Johanna and Regitz-Zagrosek, Vera and Bertram, Lars and Gerstorf, Denis and Demuth, Ilja},
 doi = {10.1093/GERONA/GLAB381},
