--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 @article{Vetter2022b,
 abbr={Front. genet.},
 abstract = {DNA methylation age (DNAm age, epigenetic clock) is a novel and promising biomarker of aging. It is calculated from the methylation fraction of specific cytosine phosphate guanine sites (CpG sites) of genomic DNA. Several groups have proposed epigenetic clock algorithms and these differ mostly regarding the number and location of the CpG sites considered and the method used to assess the methylation status. Most epigenetic clocks are based on a large number of CpGs, e.g. as measured by DNAm microarrays. We have recently evaluated an epigenetic clock based on the methylation fraction of seven CpGs that were determined by methylation-sensitive single nucleotide primer extension (MS-SNuPE). This method is more cost-effective when compared to array-based technologies as only a few CpGs need to be examined. However, there is only little data on the correspondence in epigenetic age estimation using the 7-CpG clock and other algorithms. To bridge this gap, in this study we measured the 7-CpG DNAm age using two methods, via MS-SNuPE and via the MethylationEPIC array, in a sample of 1,058 participants of the Berlin Aging Study II (BASE-II), assessed as part of the GendAge study. On average, participants were 75.6 years old (SD: 3.7, age range: 64.9–90.0, 52.6% female). Agreement between methods was assessed by Bland-Altman plots. DNAm age was highly correlated between methods (Pearson's r = 0.9) and Bland-Altman plots showed a difference of 3.1 years. DNAm age by the 7-CpG formula was 71.2 years (SD: 6.9 years, SNuPE) and 68.1 years (SD: 6.4 years, EPIC array). The mean of difference in methylation fraction between methods for the seven individual CpG sites was between 0.7 and 13 percent. To allow direct conversion of DNAm age obtained from both methods we developed an adjustment formula with a randomly selected training set of 529 participants using linear regression. After conversion of the Illumina data in a second and independent validation set, the adjusted DNAm age was 71.44 years (SD: 6.1 years, n = 529). In summary, we found the results of DNAm clocks to be highly comparable. Furthermore, we developed an adjustment formula that allows for direct conversion of DNAm age estimates between methods and enables one singular clock to be used in studies that employ either the Illumina or the SNuPE method.},
+bibtex_show={true},
 author = {Vetter, Valentin Max and Kalies, Christian Humberto and Sommerer, Yasmine and Bertram, Lars and Demuth, Ilja},
 doi = {10.3389/FGENE.2021.759357/BIBTEX},
 issn = {16648021},
@@ -20,6 +21,7 @@ year = {2022}
 
 @article{Vetter2022a,
 abstract = {Patients with diabetes mellitus are at risk for micro- and macrovascular complications that are responsible for a substantial part of the individual health burden and socio-economic costs. Therefore, implementable risk scores are needed to improve targeted prevention for patients that are particularly susceptible to complications. The “epigenetic clock” estimates an individual’s biological age using DNA methylation profiles and was previously shown to be associated with morbidity and mortality.
+bibtex_show={true},
 In this study, we examine older adults of the BASE-II study that were reexamined on average 7.4 years after baseline assessment as part of the GendAge study. For DNA methylation age (DNAmA) estimation we used the 7-CpG clock which was available for two timepoints (n=1,071 at follow-up). In addition, we determined epigenetic age using Horvath’s clock, Hannum’s clock, PhenoAge and GrimAge which were available at follow-up only (n=1,067). The deviation of DNAmA from chronological age, DNA methylation age acceleration (DNAmAA), was calculated as residuals of a leukocyte cell count adjusted linear regression analysis. Diabetes associated complications were assessed with the Diabetes Complications Severity Index (DCSI).
 Cross-sectionally, a statistically significant association between oral glucose tolerance test results and Hannum (ß=0.8, SE=0.3, p=0.02, n=762) and PhenoAge DNAmAA (ß=0.8, SE=0.3, p=0.003, n=762) was found. PhenoAge was also associated with fasting glucose (ß=0.3, SE=0.1, p=0.013, n=966). In contrast, we observed no cross-sectional association after covariate adjustment between DNAmAA and a diagnosis of diabetes mellitus with any of the five clocks employed. This was true for longitudinal analyses with the 7-CpG clock as well. However, longitudinal analyses showed that every year in the 7-CpG-based DNAmAA estimate at baseline increased the risk for developing of one or more additional complications or worsening of an already existing complication during the follow-up period by 11% in male participants with diabetes mellitus type 2. This association persisted after adjustment for DCSI at baseline, chronological age, smoking, alcohol, diabetes medication, and BMI (OR =1.11, p=0.045, n=56). No statistically significant association was found in the subgroup of women or when the whole dataset was analyzed (p>0.05).
 Although our findings still need to be independently validated, the 7-CpG clock appears to be a promising biomarker which is informative about the individual risk for diabetic complications independent of age, sex, lifestyle factors, or complications at baseline.},
@@ -38,6 +40,7 @@ year = {2022}
 @article{Vetter2022d,
 abbr={GeroScience},
 abstract = {Adverse effects of low vitamin D level on mortality and morbidity are controversially discussed. Especially older people are at risk for vitamin D deficiency and therefore exposed to its potentially harmful consequences. A way of measuring differences in the biological age is through DNA methylation age (DNAm age) and its deviation from chronological age, DNAm age acceleration (DNAmAA). We previously reported on an association between vitamin D deficiency and higher 7-CpG DNAmAA in participants of the Berlin Aging Study II (BASE-II). In this study, we employ a quasi-interventional study design to assess the relationship between DNAmAA of five epigenetic clocks and vitamin D supplementation. Longitudinal data were available for 1,036 participants of BASE-II that were reexamined on average 7.4 years later in the GendAge study (mean age at follow-up: 75.6 years, SD = 3.8 years, age range: 64.9–94.1 years, 51.9% female). DNAmAA was estimated with the 7-CpG clock, Horvath's clock, Hannum's clock, PhenoAge, and GrimAge. Methylation data were obtained through methylation-sensitive single nucleotide primer extension (MS-SNuPE) or Illumina's Infinium “MethylationEPIC” array. Vitamin D–deficient participants who chose to start vitamin D supplementation after baseline examination showed a 2.6-year lower 7-CpG DNAmAA (p = 0.011) and 1.3-year lower Horvath DNAmAA (p = 0.042) compared to untreated and vitamin D–deficient participants. DNAmAA did not statistically differ between participants with successfully treated vitamin D deficiency and healthy controls (p > 0.16). Therefore, we conclude that intake of vitamin D supplement is associated with lower DNAmAA in participants with vitamin D deficiency.},
+bibtex_show={true},
 author = {Vetter, Valentin Max and Sommerer, Yasmine and Kalies, Christian Humberto and Spira, Dominik and Bertram, Lars and Demuth, Ilja},
 doi = {10.1007/S11357-022-00581-9/TABLES/4},
 issn = {25092723},
@@ -57,6 +60,7 @@ year = {2022}
 @article{Vetter2022c,
 abbr={Transl. Psychiatry},
 abstract = {Adverse effects of psychological stress on physical and mental health, especially in older age, are well documented. How perceived stress relates to the epigenetic clock measure, DNA methylation age acceleration (DNAmAA), is less well understood and existing studies reported inconsistent results. DNAmAA was estimated from five epigenetic clocks (7-CpG, Horvath's, Hannum's, PhenoAge and GrimAge DNAmAA). Cohen's Perceived Stress Scale (PSS) was used as marker of psychological stress. We analyzed data from 1,100 Berlin Aging Study II (BASE-II) participants assessed as part of the GendAge study (mean age = 75.6 years, SD = 3.8 years, 52.1% women). In a first step, we replicated well-established associations of perceived stress with morbidity, frailty, and symptoms of depression in the BASE-II cohort studied here. In a second step, we did not find any statistically significant association of perceived stress with any of the five epigenetic clocks in multiple linear regression analyses that adjusted for covariates. Although the body of literature suggests an association between higher DNAmAA and stress or trauma during early childhood, the current study found no evidence for an association of perception of stress with DNAmAA in older people. We discuss possible reasons for the lack of associations and highlight directions for future research.},
+bibtex_show={true},
 author = {Vetter, Valentin Max and Drewelies, Johanna and Sommerer, Yasmine and Kalies, Christian Humberto and Regitz-Zagrosek, Vera and Bertram, Lars and Gerstorf, Denis and Demuth, Ilja},
 doi = {10.1038/s41398-022-02181-9},
 issn = {2158-3188},
@@ -76,6 +80,7 @@ year = {2022}
 @article{Vetter2022e,
 abbr={J. Gerontol.},
 abstract = {DNA methylation age acceleration (DNAmAA, derived from an epigenetic clock) and relative leukocyte telomere length (rLTL) are widely accepted biomarkers of aging. Nevertheless, it is still unclear which aspects of aging they represent best. Here we evaluated longitudinal associations between baseline rLTL and DNAmAA (estimated with 7-CpG clock) and functional assessments covering different domains of aging. Additionally, we made use of cross-sectional data on these assessments and examined their association with DNAmAA estimated by 5 different DNAm age measures. Two-wave longitudinal data were available for 1 083 participants of the Berlin Aging Study II who were reexamined on average 7.4 years after baseline as part of the GendAge study. Functional outcomes were assessed with Fried's frailty score, Tinetti mobility test, falls in the past 12 months (yes/no), finger-floor distance, Mini-Mental State Examination, Center for Epidemiologic Studies - Depression scale, activities of daily living, instrumented ADL, and mini nutritional assessment. Overall, we found no evidence for an association between the molecular biomarkers measured at baseline, rLTL, and DNAmAA (7-CpG clock), and functional assessments assessed at follow-up. Similarly, a cross-sectional analysis of follow-up data did also not show evidence for associations of the various DNAmAA measures (7-CpG clock, Horvath's clock, Hannum's clock PhenoAge, and GrimAge) with functional assessments. In conclusion, neither rLTL nor 7-CpG DNAmAA was able to predict impairment in the analyzed assessments over a $\sim$7-year time course. Similarly, DNAmAA estimated from 5 epigenetic clocks was not a good cross-sectional marker of health deterioration either.},
+bibtex_show={true},
 author = {Vetter, Valentin M. and Kalies, Christian H. and Sommerer, Yasmine and Spira, Dominik and Drewelies, Johanna and Regitz-Zagrosek, Vera and Bertram, Lars and Gerstorf, Denis and Demuth, Ilja},
 doi = {10.1093/GERONA/GLAB381},
 issn = {1079-5006},
@@ -95,6 +100,7 @@ year = {2022}
 @article{Sommerer2022,
 abbr={Biomedicines},
 abstract = {The decline in episodic memory (EM) performance is a hallmark of cognitive aging and an early clinical sign in Alzheimer's disease (AD). In this study, we conducted an epigenome-wide association study (EWAS) using DNA methylation (DNAm) profiles from buccal and blood samples for cross-sectional (n = 1019) and longitudinal changes in EM performance (n = 626; average follow-up time 5.4 years) collected under the auspices of the Lifebrain consortium project. The mean age of participants with cross-sectional data was 69 ± 11 years (30–90 years), with 50% being females. We identified 21 loci showing suggestive evidence of association (p < 1 × 10−5) with either or both EM phenotypes. Among these were SNCA, SEPW1 (both cross-sectional EM), ITPK1 (longitudinal EM), and APBA2 (both EM traits), which have been linked to AD or Parkinson's disease (PD) in previous work. While the EM phenotypes were nominally significantly (p < 0.05) associated with poly-epigenetic scores (PESs) using EWASs on general cognitive function, none remained significant after correction for multiple testing. Likewise, estimating the degree of “epigenetic age acceleration” did not reveal significant associations with either of the two tested EM phenotypes. In summary, our study highlights several interesting candidate loci in which differential DNAm patterns in peripheral tissue are associated with EM performance in humans.},
+bibtex_show={true},
 author = {Sommerer, Yasmine and Dobricic, Valerija and Schilling, Marcel and Ohlei, Olena and Bartr{\'{e}}s-Faz, David and Cattaneo, Gabriele and Demuth, Ilja and D{\"{u}}zel, Sandra and Franzenburg, S{\"{o}}ren and Fu{\ss}, Janina and Lindenberger, Ulman and Pascual-Leone, {\'{A}}lvaro and Sabet, Sanaz Sedghpour and Sol{\'{e}}-Padull{\'{e}}s, Cristina and Tormos, Josep M. and Vetter, Valentin Max and Wesse, Tanja and Franke, Andre and Lill, Christina M. and Bertram, Lars},
 doi = {10.3390/BIOMEDICINES10112798/S1},
 issn = {22279059},
@@ -114,6 +120,7 @@ selected={true}
 @article{Sommerer2022a,
 abbr={Clin. Epigenetics},
 abstract = {Epigenome-wide association studies (EWAS) assessing the link between DNA methylation (DNAm) and phenotypes related to structural brain measures, cognitive function, and neurodegenerative diseases are becoming increasingly more popular. Due to the inaccessibility of brain tissue in humans, several studies use peripheral tissues such as blood, buccal swabs, and saliva as surrogates. To aid the functional interpretation of EWAS findings in such settings, there is a need to assess the correlation of DNAm variability across tissues in the same individuals. In this study, we performed a correlation analysis between DNAm data of a total of n = 120 matched post-mortem buccal and prefrontal cortex samples. We identified nearly 25,000 (3% of approximately 730,000) cytosine-phosphate-guanine (CpG) sites showing significant (false discovery rate q < 0.05) correlations between buccal and PFC samples. Correlated CpG sites showed a preponderance to being located in promoter regions and showed a significant enrichment of being determined by genetic factors, i.e. methylation quantitative trait loci (mQTL), based on buccal and dorsolateral prefrontal cortex mQTL databases. Our novel buccal–brain DNAm correlation map will provide a valuable resource for future EWAS using buccal samples for studying DNAm effects on phenotypes relating to the brain. All correlation results are made freely available to the public online.},
+bibtex_show={true},
 author = {Sommerer, Yasmine and Ohlei, Olena and Dobricic, Valerija and Oakley, Derek H. and Wesse, Tanja and {Sedghpour Sabet}, Sanaz and Demuth, Ilja and Franke, Andre and Hyman, Bradley T. and Lill, Christina M. and Bertram, Lars},
 doi = {10.1186/S13148-022-01357-W/FIGURES/4},
 issn = {18687083},
@@ -134,6 +141,7 @@ selected={true}
 @article{Vetter2022,
 abbr={Innov. Aging},
 abstract = {Particularly older people are at risk for deficient vitamin D levels, as their capability for cutaneous synthetization is lower and they are often less exposed to sunlight. However, the resulting impact on one individual's health is not fully understood. To examine potential consequences of low vitamin D levels for health of older people, we examined its relationship with a DNA related biomarker of aging, DNA methylation age acceleration (DNAmAA). Several epigenetic clocks, that are used to estimate this parameter from methylation fractions of specific cytosine-phosphate-guanine sites, are available and differ in aspects of aging they represent best. Five clocks, 7-CpG clock, Horvath's clock, Hannum's clock, PhenoAge, and GrimAge, were available in the longitudinal BASE-II cohort (n=1,100) at follow-up examination. DNAmAA estimated from 7-CpG clock and GrimAge was associated with vitamin D levels in covariate adjusted regression analysis. Additionally, a quasi-interventional study design was employed and showed 2.6 year lower 7-CpG DNAmAA (p=0.011) and 1.3-year lower Horvath DNAmAA (p=0.042) in vitamin D deficient participants that chose to start vitamin D supplementation during the follow-up period of 7.4 ± 1.5 years compared to a matched control-group of participants with untreated vitamin D deficiency. No statistically significant difference was found between sufficiently treated participants with vitamin D deficiency and a matched group of participants that reached sufficient vitamin D level without supplementation. Although validation of our results in a randomized controlled trial is needed, our findings suggest, that vitamin D deficiency associated higher rates of epigenetic aging can potentially be reversed through supplementation.},
+bibtex_show={true},
 author = {Vetter, Valentin and Sommerer, Yasmine and Kalies, Christian and Spira, Dominik and Bertram, Lars and Demuth, Ilja},
 doi = {10.1093/GERONI/IGAC059.1738},
 journal = {Innovation in Aging},
@@ -150,6 +158,7 @@ year = {2022}
 @article{Demuth2022,
 abbr={Innov. Aging},
 abstract = {The diagnosis of metabolic syndrome (MetS) relies on cut-off values for five cardiovascular risk factors, three of which must be met to make the diagnosis. While this approach has certain advantages in the clinical setting, it only allows a binary classification relying on cut-off values. Thus, individuals receiving the same MetS diagnosis may differ in terms of disease severity. We have recently developed a continuous measure of the metabolic load (MetL) that was calculated as a latent factor from indicators that are used to diagnose the MetS enabling a more differentiated assessment. DNA methylation age acceleration (DNAmAA) is a widely accepted biomarker of aging which can be derived from a variety of epigenetic clocks. However, it is still unclear which aspects of aging these biomarkers represent best. Aim of the current study was to evaluate whether and how the MetS and MetL relate to DNAmAA derived from five epigenetic clocks (7-CpG clock, Horvath's clock, Hannum's clock, PhenoAge, and GrimAge). MetS was diagnosed according to the AHA/IDF/NHLBI criteria (2009) and the latent MetL factor was extracted from a confirmatory factor analysis considering the same diagnostic parameters. DNAmAA estimated from PhenoAge and GrimAge were significantly associated with MetS (beta=0.036 and beta=0.063, both p<0.05) and MetL (both beta=0.009 and p<0.05) in regression analyses adjusted for age and gender including 1,100 participants from the follow-up assessments of the Berlin Aging Study II (BASE-II, mean age 75.6 ±3.8 years). The results will be discussed with respect to clinical relevance in the context of current literature.},
+bibtex_show={true},
 author = {Demuth, Ilja and D{\"{u}}zel, Sandra and Vetter, Valentin and Drewelies, Johanna and Sommerer, Yasmine and Steinhagen-Thiessen, Elisabeth and Gerstorf, Denis and Bertram, Lars},
 doi = {10.1093/GERONI/IGAC059.009},
 journal = {Innovation in Aging},
@@ -166,6 +175,7 @@ year = {2022}
 @article{Vetter2023,
 abbr={Commun. Med},
 abstract = {Patients with Type 2 diabetes mellitus (T2D) are at risk for micro- and macrovascular complications. Implementable risk scores are needed to improve targeted prevention for patients that are particularly susceptible to complications. The epigenetic clock estimates an individual's biological age using DNA methylation profiles. In this study, we examined older adults of the Berlin Aging Study II that were reexamined on average 7.4 years after baseline assessment as part of the GendAge study. DNA methylation age (DNAmA) and its deviation from chronological age DNAmA acceleration (DNAmAA) were calculated with the 7-CpG clock (available at both timepoints, n = 1,071), Horvath's clock, Hannum's clock, PhenoAge and GrimAge (available at follow-up only, n = 1,067). T2D associated complications were assessed with the Diabetes Complications Severity Index (DCSI). We report on a statistically significant association between oral glucose tolerance test results and Hannum and PhenoAge DNAmAA. PhenoAge was also associated with fasting glucose. In contrast, we found no cross-sectional association after covariate adjustment between DNAmAA and a diagnosis of T2D. However, longitudinal analyses showed that every additional year of 7-CpG DNAmAA at baseline increased the odds for developing one or more additional complications or worsening of an already existing complication during the follow-up period by 11% in male participants with T2D. This association persisted after covariate adjustment (OR = 1.11, p = 0.045, n = 56). Although our results remain to be independently validated, this study shows promising evidence of utility of the 7-CpG clock in identifying patients with diabetes who are at high risk for developing complications. Deterioration of vision, kidney function and cardiovascular function are just a few examples of diabetes-related complications. However, not all patients develop these complications, and it is desirable to detect patients that have a high risk for the complications early. In this study, we examine markers, which are based on reversible modifications of the DNA, in the context of diabetes and its complications. We found that one of these biomarkers is able to predict the development of diabetes complications over a period of about seven years in our dataset. If these results can be confirmed in other studies, our findings might help physicians to identify patients with diabetes that have an increased risk for developing complications in the future. Vetter et al. evaluate cross-sectional and longitudinal associations between DNA methylation age acceleration and type 2 diabetes and its complications in older adults. Although epigenetic aging does not associate with a diagnosis of diabetes, 7-CpG-based estimates are associated with increased risk of developing complications.},
+bibtex_show={true},
 author = {Vetter, Valentin Max and Spieker, Johanne and Sommerer, Yasmine and Buchmann, Nikolaus and Kalies, Christian Humberto and Regitz-Zagrosek, Vera and Bertram, Lars and Demuth, Ilja},
 doi = {10.1038/s43856-023-00250-8},
 issn = {2730-664X},
@@ -184,6 +194,7 @@ year = {2023}
 @article{Nyberg2023,
 abbr={Cereb. Cortex},
 abstract = {It is well documented that some brain regions, such as association cortices, caudate, and hippocampus, are particularly prone to age-related atrophy, but it has been hypothesized that there are individual differences in atrophy profiles. Here, we document heterogeneity in regional-atrophy patterns using latent-profile analysis of 1,482 longitudinal magnetic resonance imaging observations. The results supported a 2-group solution reflecting differences in atrophy rates in cortical regions and hippocampus along with comparable caudate atrophy. The higher-atrophy group had the most marked atrophy in hippocampus and also lower episodic memory, and their normal caudate atrophy rate was accompanied by larger baseline volumes. Our findings support and refine models of heterogeneity in brain aging and suggest distinct mechanisms of atrophy in striatal versus hippocampal-cortical systems.},
+bibtex_show={true},
 author = {Nyberg, Lars and Andersson, Micael and Lundquist, Anders and Baar{\'{e}}, William F.C. and Bartr{\'{e}}s-Faz, David and Bertram, Lars and Boraxbekk, Carl Johan and Brandmaier, Andreas M. and Demnitz, Naiara and Drevon, Christian A. and Duezel, Sandra and Ebmeier, Klaus P. and Ghisletta, Paolo and Henson, Richard and Jensen, Daria E.A. and Kievit, Rogier A. and Knights, Ethan and K{\"{u}}hn, Simone and Lindenberger, Ulman and Plachti, Anna and Pudas, Sara and Roe, James M. and Madsen, Kathrine Skak and Sol{\'{e}}-Padull{\'{e}}s, Cristina and Sommerer, Yasmine and Suri, Sana and Zsoldos, Eniko and Fjell, Anders M. and Walhovd, Kristine B.},
 doi = {10.1093/CERCOR/BHAC400},
 issn = {1047-3211},
@@ -203,6 +214,7 @@ year = {2023}
 @article{Sommerer2023,
 abbr={Alzheimer's res. ther.},
 abstract = {Background: Studies on DNA methylation (DNAm) in Alzheimer's disease (AD) have recently highlighted several genomic loci showing association with disease onset and progression. Methods: Here, we conducted an epigenome-wide association study (EWAS) using DNAm profiles in entorhinal cortex (EC) from 149 AD patients and control brains and combined these with two previously published EC datasets by meta-analysis (total n = 337). Results: We identified 12 cytosine-phosphate-guanine (CpG) sites showing epigenome-wide significant association with either case–control status or Braak's tau-staging. Four of these CpGs, located in proximity to CNFN/LIPE, TENT5A, PALD1/PRF1, and DIRAS1, represent novel findings. Integrating DNAm levels with RNA sequencing-based mRNA expression data generated in the same individuals showed significant DNAm-mRNA correlations for 6 of the 12 significant CpGs. Lastly, by calculating rates of epigenetic age acceleration using two recently proposed “epigenetic clock” estimators we found a significant association with accelerated epigenetic aging in the brains of AD patients vs. controls. Conclusion: In summary, our study represents the hitherto most comprehensive EWAS in AD using EC and highlights several novel differentially methylated loci with potential effects on gene expression.},
+bibtex_show={true},
 author = {Sommerer, Yasmine and Dobricic, Valerija and Schilling, Marcel and Ohlei, Olena and Sabet, Sanaz Sedghpour and Wesse, Tanja and Fu{\ss}, Janina and Franzenburg, S{\"{o}}ren and Franke, Andre and Parkkinen, Laura and Lill, Christina M. and Bertram, Lars},
 doi = {10.1186/S13195-023-01232-7/TABLES/6},
 issn = {17589193},
@@ -227,6 +239,7 @@ In conjunction with an extensive array of machine learning techniques, we employ
 We established a multivariate methylation risk score (MMRS) to identify the status of mild cognitive impairment (MCI) cross-sectionally, independent of age and sex. We further demonstrated significant predictive capability of this score for the prospective onset of cognitive decline in AD and PD.
 Our work shows the potential of employing blood-derived DNA methylation data in the assessment of dementia risk.},
 author = {Koetsier, Jarno and Cavill, Rachel and Reijnders, Rick and Harvey, Joshua and Deckers, Kay and K{\"{o}}hler, Sebastian and Eijssen, Lars and Smith, Rebecca G. and Smith, Adam R. and Burrage, Joe and Walker, Emma M. and Shireby, Gemma and Hannon, Eilis and Dempster, Emma and Frayling, Tim and Mill, Jonathan and Dobricic, Valerija and Sommerer, Yasmine and Johannsen, Peter and Wittig, Michael and Franke, Andre and Vandenberghe, Rik and Schaeverbeke, Jolien and Freund-Levi, Yvonne and Fr{\"{o}}lich, Lutz and Scheltens, Philip and Teunissen, Charlotte and Frisoni, Giovanni and Blin, Olivier and Richardson, Jill and Bordet, R{\'{e}}gis and Engelborghs, Sebastiaan and de Roeck, Ellen and Martinez-Lage, Pablo and Tainta, Mikel and Lle{\'{o}}, Alberto and Sala, Isabel and Popp, Julius and Peyratout, Gwedoline and Verhey, Frans and Tsolaki, Magda and Andreasson, Ulf and Blennow, Kaj and Zetterberg, Henrik and Streffer, Johannes and Vos, Stephanie J. B. and Lovestone, Simon and Visser, Pieter-Jelle and Bertram, Lars and Lunnon, Katie and Pishva, Ehsan},
+bibtex_show={true},
 doi = {10.1101/2023.09.27.23296143},
 isbn = {10.1101/2023.09.2},
 journal = {medRxiv},
@@ -245,6 +258,7 @@ We profiled DNA methylation in 886 blood samples from the EMIF-AD study using th
 We identified Bonferroni-significant differences in DNA methylation with respect to CSF t-tau Z-score (five loci), Aβ42 levels (one loci), YKL-40 levels (six loci) and NFL (seven loci). Significant differentially methylated regions were identified in 13 of the 15 analyses, with overlapping regions featuring in multiple CSF measures(MX2, RHOH, ANKMY1, ZFP57) analyses, which was unsurprising given the high correlation between measures. Interestingly, we identified several regions that overlapped between the tau and amyloid (ZBTB22), tau and NFL (S100A13), NFL and neurogranin (SORD), and neurogranin and amyloid (STRA6) regional analyses.
 In this blood-based epigenome-wide association study of AD-relevant CSF biomarkers we identified several interesting genomic loci and regions.
 },
+bibtex_show={true},
 author = {Smith, Rebecca G. and Imm, Jennifer L and Dobricic, Valerija and Sommerer, Yasmine and Bos, Isabelle and Vos, Stephanie J. B. and Verhey, Frans R.J. and Scheltens, Philip and Engelborgs, Sebastiaan and Frisoni, Giovanni B and Blin, Olivier and Richardson, Jill C and Bordet, R{\'{e}}gis and Tsolaki, Magda and Popp, Julius and Martinez‐Lage, Pablo and Lleo, Alberto and Johannsen, Peter and Freund‐Levi, Yvonne and Lutz, Fr{\"{o}}lich and Vandenberghe, Rik and Wittig, Michael and Frank, Andre and Lovestone, Simon and Streffer, Johannes and Andreasson, Ulf and Blennow, Kaj and Visser, Pieter Jelle and Zetterberg, Henrik and Bertram, Lars and Lunnon, Katie},
 doi = {10.1002/ALZ.080072},
 issn = {1552-5260},
